fixed align-self issue for iphone 6 and other smaller screens

--- a/styles/background.css
+++ b/styles/background.css
@@ -5,7 +5,14 @@ body {
 }
 
 .bg-gradient {
-  background-image: linear-gradient(to bottom right, rgb(0, 168, 225, .8),  rgb(135, 188, 200, .8) 30%, rgb(240, 202, 102, .7) 50%, #f39641 75%, #ec6f42 100% );
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(0, 168, 225, 0.8),
+    rgb(135, 188, 200, 0.8) 30%,
+    rgb(240, 202, 102, 0.7) 50%,
+    #f39641 75%,
+    #ec6f42 100%
+  );
   background-repeat: repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -18,6 +25,7 @@ body {
   } */
 }
 
+
 .bg-distortion {
   background-image: url("../public/bg-distortion.svg");
   background-size: 400px;
@@ -28,14 +36,13 @@ body {
   /* filter: contrast(100%) brightness(100%); */
 }
 
-.bg-triangles { 
+.bg-triangles {
   background-image: url("../public/bg-triangles.svg");
   height: 100%;
   background-size: 100vw;
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
-  /* background-repeat: repeat; */
 }
 
 .page-wrapper {
@@ -46,5 +53,10 @@ body {
   align-items: center;
   overflow: hidden;
   max-width: 1200px;
-  align-self: center;
+}
+
+@media (min-width: 786px) {
+  .page-wrapper {
+    align-self: center;
+  }
 }
